Fix overflow orizzontale: box-sizing border-box su gallery ispirazione

--- a/villasg-child/assets/css/theme.css
+++ b/villasg-child/assets/css/theme.css
@@ -1595,6 +1595,7 @@
   width:100%;
   max-width:none;
   margin:0;
+  box-sizing:border-box;
 }
 .vsg-ispirazione__gallery.wp-block-gallery::-webkit-scrollbar{display:none;width:0;height:0}
 .vsg-ispirazione__gallery .wp-block-image{
